--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.9",
     "vue": "^2.6.14",
+    "vue-fragment": "^1.6.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
